@@ -1,5 +1,9 @@
 2000-08-07  Akim Demaille  <akim@epita.fr>
 
+	* tests/tools.m4 (undefined macros): New test.
+
+2000-08-07  Akim Demaille  <akim@epita.fr>
+
 	* autoconf.sh (finalize.awk): New subtool, eved from the previous
 	literal AWK program that performed the `oline' and quadrigraphs
 	substitution.
